--- a/containers/javascript-node-12-postgres/.devcontainer/devcontainer.json
+++ b/containers/javascript-node-12-postgres/.devcontainer/devcontainer.json
@@ -15,6 +15,9 @@
 		"dbaeumer.vscode-eslint"
 	]
 
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
 
