--- a/containers/python-3-postgres/.devcontainer/devcontainer.json
+++ b/containers/python-3-postgres/.devcontainer/devcontainer.json
@@ -29,6 +29,9 @@
 		"ms-python.python"
 	]
 
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
 
