--- a/container-templates/docker-compose/.devcontainer/docker-compose.yml
+++ b/container-templates/docker-compose/.devcontainer/docker-compose.yml
@@ -6,11 +6,12 @@
 version: '3'
 services:
   your-service-name-here:
-    # Uncomment the next line to use a non-root user for all processes. You can also
-    # simply use the "remoteUser" property in devcontainer.json if you just want VS Code
-    # and its sub-processes (terminals, tasks, debugging) to execute as the user. On Linux,
-    # you may need to update USER_UID and USER_GID in .devcontainer/Dockerfile to match your
-    # user if not 1000. See https://aka.ms/vscode-remote/containers/non-root for details.
+    # You may want to add a non-root user to your Dockerfile and uncomment the line below
+    # to cause all processes to run as this user. However, if you just want VS Code and
+    # its sub-processes (terminals, tasks, debugging) to execute as the user, you can 
+    # the "remoteUser" property in devcontainer.json instead. On Linux, you may need to 
+    # ensure the UID and GID of the container user you create matches your local user. 
+    # See https://aka.ms/vscode-remote/containers/non-root for details.
     # user: vscode
 
     # Using a Dockerfile is optional, but included for completeness.
