--- a/containers/docker-in-docker-compose/.devcontainer/devcontainer.json
+++ b/containers/docker-in-docker-compose/.devcontainer/devcontainer.json
@@ -15,6 +15,9 @@
 		"ms-azuretools.vscode-docker"
 	]
 
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
 
