--- a/containers/docker-in-docker-compose/.devcontainer/docker-compose.yml
+++ b/containers/docker-in-docker-compose/.devcontainer/docker-compose.yml
@@ -6,16 +6,20 @@
 version: '3'
 services:
   docker-in-docker:
-    # Uncomment the next line to use a non-root user for all processes. You can also
-    # simply use the "remoteUser" property in devcontainer.json if you just want VS Code
-    # and its sub-processes (terminals, tasks, debugging) to execute as the user. On Linux,
-    # you may need to update USER_UID and USER_GID in .devcontainer/Dockerfile to match your
-    # user if not 1000. See https://aka.ms/vscode-remote/containers/non-root for details.
+    # You may want to add a non-root user to your Dockerfile and uncomment the line below
+    # to cause all processes to run as this user. However, if you just want VS Code and
+    # its sub-processes (terminals, tasks, debugging) to execute as the user, you can 
+    # the "remoteUser" property in devcontainer.json instead. On Linux, you may need to 
+    # ensure the UID and GID of the container user you create matches your local user. 
+    # See https://aka.ms/vscode-remote/containers/non-root for details.
     # user: vscode
 
     build: 
       context: .
       dockerfile: Dockerfile
+      args:
+        USER_UID: 1000
+        USER_GID: 1000
 
     volumes:
       # Update this to wherever you want VS Code to mount the folder of your project
@@ -30,6 +34,6 @@ services:
     # security_opt:
     #   - seccomp:unconfined
 
-    # Overrides default command so things don't shut down after the process ends.
-    command: sleep infinity 
-    
+    # Overrides default command to verify that vscode user can access docker socket 
+    # and that things don't shut down after the process ends.
+    command: /bin/bash -c /usr/local/bin/check-docker-group && sleep infinity 
