--- a/containers/javascript-node-12-mongo/.devcontainer/Dockerfile
+++ b/containers/javascript-node-12-mongo/.devcontainer/Dockerfile
@@ -5,10 +5,10 @@
 
 FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:12
 
-# The node image includes a non-root user with sudo access. Use the 
-# "remoteUser" property in devcontainer.json to use it. On Linux, update 
-# these values to ensure the container user's UID/GID matches your local values.
-# See https://aka.ms/vscode-remote/containers/non-root-user for details.
+# This image includes a non-root user with sudo access. Use the "remoteUser" 
+# property in devcontainer.json to use it. On Linux, update the values below 
+# or in docker-compose.yml to ensure the container user's UID/GID matches your
+# local values. See https://aka.ms/vscode-remote/containers/non-root-user for details.
 ARG USERNAME=node
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
@@ -17,14 +17,12 @@ ARG USER_GID=$USER_UID
 RUN if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
         groupmod --gid $USER_GID $USERNAME \
         && usermod --uid $USER_UID --gid $USER_GID $USERNAME \
-        && chmod -R $USER_UID:$USER_GID /home/$USERNAME; \
+        && chmod -R $USER_UID:$USER_GID /home/$USERNAME /usr/local/share/npm-global; \
     fi
 
-# *************************************************************
-# * Uncomment this section to use RUN instructions to install *
-# * any needed dependencies after executing "apt-get update". *
-# * See https://docs.docker.com/engine/reference/builder/#run *
-# *************************************************************
+
+# [Optional] Uncomment this section to install additional packages.
+#
 # ENV DEBIAN_FRONTEND=noninteractive
 # RUN apt-get update \
 #    && apt-get -y install --no-install-recommends <your-package-list-here> \
