--- a/containers/python-3-postgres/.devcontainer/docker-compose.yml
+++ b/containers/python-3-postgres/.devcontainer/docker-compose.yml
@@ -6,14 +6,13 @@ services:
     # simply use the "remoteUser" property in devcontainer.json if you just want
     # VS Code and its sub-processes (terminals, tasks, debugging) to execute as the user
     # On Linux, you may need to update the args USER_UID and USER_GID the "build" section
-    # to match your user if not 1000. See https://aka.ms/vscode-remote/containers/non-root for details.
+    # to match your user if not 1000. See https://aka.ms/vscode-remote/containers/non-root.
     # user: vscode
 
     build: 
       context: ..
       dockerfile: .devcontainer/Dockerfile
       args:
-        #
         VARIANT: 3
         USER_UID: 1000
         USER_GID: 1000
