--- a/containers/docker-from-docker/.devcontainer/devcontainer.json
+++ b/containers/docker-from-docker/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "Docker from Docker",
 	"dockerFile": "Dockerfile",
-	"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind" ],
+	"runArgs": [ "--privileged"],
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
